# argus

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml  run-argus.cmd
backend/: aggregator.py  app.py  cli.py  config.py  kanban_actions.py  models.py  requirements.txt  review_ledger.py  review_scheduler.py  session_detail.py  settings.py  skill_review.py  skill_writeback.py  transport.py
backend/collectors/: claude_agents.py  crons.py  gateway.py  kanban.py  profiles.py  reliability.py  sessions.py  usage.py
docs/: DESIGN.md  PLAN.md
docs/superpowers/plans/: 2026-06-30-skill-review-v2-ledger.md
docs/superpowers/specs/: 2026-06-29-claude-agents-panel-design.md  2026-06-29-configurability-design.md  2026-06-29-kanban-board-design.md  2026-06-29-map-tab-v1-design.md  2026-06-29-session-drilldown-design.md  2026-06-29-skill-review-harness-design.md  2026-06-29-summary-and-tabs-design.md  2026-06-29-visual-fleet-mode-research.md  2026-06-30-skill-review-v2-design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  sample.ts  types.ts  useOverview.ts
frontend/src/__tests__/: App.test.tsx
frontend/src/board/: AddTaskModal.tsx  api.ts  (+3 more)
scripts/: setup.ps1  setup.sh
tests/: conftest.py  test_aggregator.py  test_app.py  test_cli.py  test_collectors.py  test_config.py  test_kanban.py  test_models.py  test_review_ledger.py  test_review_scheduler.py  test_session_detail.py  test_skill_review.py  test_skill_writeback.py  test_skill_writeback_endpoints.py  test_transport.py
(+43 files in other folders)
