[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-dashboard"
version = "1.2.0"
description = "Argus — read-only cross-machine mission control for Hermes (and Claude Code) agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[project.scripts]
argus = "backend.cli:main"

[tool.setuptools]
packages = ["backend", "backend.collectors"]
